Add page loaders

--- a/src/root.astro
+++ b/src/root.astro
@@ -1,10 +1,18 @@
 ---
 import RouterRenderer from './router';
 ---
-<div class="flex items-center justify-center bg-gradient-to-l from-sky-400 to-indigo-600 min-h-screen">
-  <RouterRenderer
-    client:load
-    pathname={Astro.url.pathname}
-    search={Astro.url.search}
-  />
-</div>
+<html lang="en">
+  <head>
+    <title>Astro + Solid SPA w/ List</title>
+  </head>
+  <body>
+    <div class="flex items-center justify-center bg-gradient-to-l from-sky-400 to-indigo-600 min-h-screen">
+      <RouterRenderer
+        client:load
+        data={Astro.props.data}
+        pathname={Astro.url.pathname}
+        search={Astro.url.search}
+      />
+    </div>
+  </body>
+</html>
