Move code to internal

--- a/src/internal/meta/render-meta.astro
+++ b/src/internal/meta/render-meta.astro
@@ -1,8 +1,8 @@
 ---
-import { LoadResult } from '../router';
+import { SuccessResult } from '../router';
 import resolveMeta from './resolve-meta';
 
-interface Props extends LoadResult<any> {
+interface Props extends SuccessResult<any> {
   // 
 }
 
