--- a/src/root.astro
+++ b/src/root.astro
@@ -1,7 +1,7 @@
 ---
 import RenderMeta from './internal/meta/render-meta.astro';
 import { LoadResult } from './internal/router';
-import RouterRenderer from './router';
+import { Renderer } from './router';
 
 interface Props extends LoadResult<any> {
 
@@ -16,7 +16,7 @@ interface Props extends LoadResult<any> {
   </head>
   <body>
     <div class="flex items-center justify-center bg-gradient-to-l from-sky-400 to-indigo-600 min-h-screen">
-      <RouterRenderer
+      <Renderer
         client:load
         data={Astro.props.data}
         pathname={Astro.url.pathname}
